--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 # You don't need to edit this file, it's empty on purpose.
 # Edit theme's home layout instead if you wanna make some changes
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
+#layout: home
+# vgl. https://mmistakes.github.io/minimal-mistakes/docs/layouts/#home-page-layout
+layout: splash
+header:
+  image: /assets/images/logo2.jpg
 author_profile: true
 ---
+
+## Herzlich Willkommen auf der Homepage des Ohrdrufer Leichtathletik-Vereins
+
+![OLV](/assets/images/olv.png)
+![Sponsor des Ohrdrufer LV](/assets/images/logo_ohraenergie_4c.png)
+Sponsor des Ohrdrufer LV
