--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ author_profile: true
 
 ## Herzlich Willkommen auf der Homepage des Ohrdrufer Leichtathletik-Vereins
 
-![OLV](/assets/images/olv.png)
-![Sponsor des Ohrdrufer LV](/assets/images/logo_ohraenergie_4c.png)
+[OLV](/assets/images/olv.png)
+[Sponsor des Ohrdrufer LV](/assets/images/logo_ohraenergie_4c.png)
 Sponsor des Ohrdrufer LV
