--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 #layout: home
 # vgl. https://mmistakes.github.io/minimal-mistakes/docs/layouts/#home-page-layout
-layout: splash
+layout: single
 header:
   image: /assets/images/logo2.jpg
 author_profile: true
